--- a/Nonna/wwwroot/index.html
+++ b/Nonna/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/app.css" />
     <link href="Nonna.Web.styles.css" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Italiana&family=Meow+Script&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 </head>
