--- a/Nonna/wwwroot/index.html
+++ b/Nonna/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nonna</title>
-    <!--<base href="/" />-->
+    <!--<base href="/" />--> <!--For local dev use-->
     <base href="/Nonna/" />
     <link rel="stylesheet" href="css/app.css" />
     <link href="Nonna.Web.styles.css" rel="stylesheet" />
